# usb-share-bridge

./: ARCHITECTURE.md  CMakeLists.txt  ClientExamples.hpp  DIAGRAMS.md  FINAL_IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  MIGRATION.md  NEW_FILES_LIST.md  PACKAGE_SUMMARY.md  QUICK_REFERENCE.md  RDMs.md  README.md  README_V2_IMPLEMENTATION.md  VISUAL_OVERVIEW.md  WRITEQUEUE_AND_CACHE.md  dependencies.sh  deployment_script.sh  platformio.ini
config/: lv_conf.h  network.json  system.json  system_v2.json  ui.json
include/core/: CacheManager.hpp  ConfigManager.hpp  FileChangeLogger.hpp  FileOperationQueue.hpp  HostController.hpp  MutexLocker.hpp  StorageManager.hpp  UsbBridge.hpp  WriteQueueManager.hpp
include/gui/: GuiManager.hpp  Screen.hpp  Widgets.hpp
include/gui/screens/: ScreenFileExplorer.hpp  ScreenHome.hpp  ScreenLogViewer.hpp  ScreenNetwork.hpp  ScreenSettings.hpp
include/hardware/: DisplayDriver.hpp  LedController.hpp  TouchDriver.hpp
include/network/: HttpServer.hpp  NetworkManager.hpp  SmbServer.hpp
include/utils/: FileUtils.hpp  Logger.hpp  Timer.hpp
scripts/: mount_drive.sh  setup_network.sh  start_nas.sh  watchdog.sh
src/: main.cpp
src/core/: CacheManager.cpp  ConfigManager.cpp  FileChangeLogger.cpp  FileOperationQueue.cpp  HostController.cpp  MutexLocker.cpp  StorageManager.cpp  UsbBridge.cpp  WriteQueueManager.cpp
src/gui/: GuiManager.cpp
src/gui/screens/: ScreenFileExplorer.cpp  ScreenHome.cpp  ScreenLogViewer.cpp  ScreenNetwork.cpp  ScreenSettings.cpp
src/gui/widgets/: FileListWidget.cpp  ProgressWidget.cpp  StatusWidget.cpp
src/hardware/: DisplayDriver.cpp  LedController.cpp  TouchDriver.cpp
src/network/: HttpServer.cpp
web/: index.html
web/css/: style.css
web/js/: app.js
